<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE xml>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.pokemongostats"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_no_stretch"
    android:orientation="vertical" >

    <AutoCompleteTextView
        android:completionThreshold="1"
        android:id="@+id/search_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/SectionTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.pokemongostats.view.rows.MoveRowView
                android:id="@+id/selected_move"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <TextView
                style="@style/SubSectionTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemons_with_move" />

            <com.pokemongostats.view.expandables.PkmnDescExpandable
                android:id="@+id/pokemons_with_move"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/pokemon_list" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>